--- a/NAD-CON-Matrix.ipynb
+++ b/NAD-CON-Matrix.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from sklearn.model_selection import train_test_split # split data for trin&tes\n",
     "from sklearn.ensemble import RandomForestClassifier #model we need to traning  Desition Tree algorthim \n",
     "from sklearn.metrics import accuracy_score , confusion_matrix #accuracy for model / we need 100 or 0.99 - 1.\n",
@@ -16,8 +15,7 @@
     "import numpy as np # arrys \n",
     "import seaborn as sns # for draw\n",
     "import sklearn  # machine learning library\n",
-    "from collections import Counter #count classes \n",
-    "\n"
+    "from collections import Counter #count classes "
    ]
   },
   {
@@ -658,7 +656,7 @@
    ],
    "source": [
     "print(NAD.shape)\n",
-    "# Drop Conestent and Qusi-conest initail feature selection  \n",
+    "# Drop Conestent and Quasi-conest initail feature selection  \n",
     "NAD  =NAD.drop(['Bwd PSH Flags','Fwd URG Flags','Bwd URG Flags',\n",
     "'FIN Flag Cnt','SYN Flag Cnt','RST Flag Cnt','PSH Flag Cnt','ACK Flag Cnt',\n",
     "                'URG Flag Cnt','CWE Flag Count','ECE Flag Cnt','Down/Up Ratio','Fwd Byts/b Avg','Fwd Pkts/b Avg',\n",
@@ -715,7 +713,27 @@
    "execution_count": 10,
    "id": "c9da6b30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6.75984985e-03 3.52941176e-01 1.17820004e-03 ... 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " [7.58140812e-01 3.52941176e-01 2.33333341e-06 ... 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " [6.75984985e-03 3.52941176e-01 2.33185841e-03 ... 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " ...\n",
+      " [1.23294778e-01 3.52941176e-01 4.03333347e-06 ... 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " [1.23294778e-01 3.52941176e-01 3.73333346e-06 ... 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " [1.23294778e-01 3.52941176e-01 4.45833348e-06 ... 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
@@ -723,7 +741,8 @@
     "scaler.fit(X)\n",
     "\n",
     "# Transform the data\n",
-    "X = scaler.transform(X)\n"
+    "X = scaler.transform(X)\n",
+    "print(X)"
    ]
   },
   {
@@ -1381,7 +1400,9 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "9cd24d09",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
